--- a/backend_2/docker-compose.yml
+++ b/backend_2/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     container_name: app
     restart: always
     build: .
-    ports_ configs:
-      -"4000:4000"
+    ports:
+      - "4000:4000"
     links:
       - mongo
   mongo:
@@ -14,4 +14,4 @@ services:
     volumes:
       - ./data:/data/db
     ports:
-      -"27017:27017"
+      - "27017:27017"
